--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -44,7 +44,7 @@
     padding: 10px;
   }
 
-  .whatsapp{
+  /* .whatsapp{
     font-size: 25px;
     display: flex;
     align-items: center;
@@ -59,4 +59,26 @@
     align-items: center;
     justify-content: center;
     color: red;
+    
+  } */
+
+  
+
+  .login_button{
+    display: flex;
+    justify-content: right !important;
+    margin-right: 1.5rem;
+    font-size: 2.5rem;
+    color: black;
+    margin-bottom: 1rem;
   }
+
+  .signup_button{
+    text-decoration: none;
+  }
+
+  .alreadyaccount{
+    text-decoration: none;
+  }
+
+  
