--- a/src/style.css
+++ b/src/style.css
@@ -276,6 +276,76 @@ marquee{
   }
 
 
+
+
+
+  /* Footer */
+
+  .footer{
+    width: 100%;
+    height:600px;
+    background-color: #F0F0F0;
+    margin-top: 2rem;
+}
+
+  .boxes{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    gap: 2rem;
+    padding: 0.5rem;
+    
+  }
+
+  .firstbox{
+    border: 1px solid black;
+    padding: 2px 3px;
+    width: 33%;
+  }
+
+
+  .secondbox{
+    border: 1px solid black;
+    padding: 2px 3px;
+    width:33%;
+  }
   
+.thirdbox{
+    border: 1px solid black;
+    padding: 2px 3px;
+    width: 33%;
+}
+
+.bold{
+    font-weight: bold;
+}
+.bold1{
+    font-weight: bold;
+    line-height: 5rem;
+}
+
+.bodyfooter{
+    display: flex;
+    flex-direction: row;
+    margin-top: -1rem;
+    gap:1.2rem;
+}
 
 
+.firstline{
+    margin: 2rem;
+}
+
+.btnsubscribe{
+    background-color: #e6007e;
+    border: 0.7px solid black;
+    padding: 3px;
+    color: white;
+    width: 5rem;
+    display: inline;
+    cursor: pointer;
+}
+
+.copyright{
+    margin-top: 1rem;
+}
