login signup updated

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -109,3 +109,94 @@
   .registerformbutton:hover{
     background-color: white;
   }
+
+  .dashboard-text{
+    margin:2rem;
+
+  }
+
+  .logout-button{
+    display: flex;
+    justify-content: right;
+    align-items: right;
+    margin-right: 2rem;
+  }
+
+  .formlogin{
+    border: 1px solid black;
+    border-radius: 15px;
+    width: 20rem;
+    background-color: black;
+    margin-left: 32.5rem;
+    height: 350px;
+    color: white;
+    margin-top: 2rem;
+
+  }
+
+
+  
+  .login-text{
+    display: flex;
+    justify-content: center;
+    margin-top: 1.2rem ;
+  }
+
+  .signupform{
+    border: 1px solid black;
+    border-radius: 15px;
+    width:20rem;
+    background-color: black;
+    color: white;
+    margin-top: 2rem;
+    margin-left: 32.5rem;
+    height: 40rem;
+  }
+
+  .signup-text{
+    display: flex;
+    justify-content: center;
+    margin-top: 1.2rem;
+  }
+
+  .continue{
+    margin-top: 6px;
+    display: flex;
+    gap: 0.7rem;
+
+  }
+
+  .fb{
+      font-size: 1.6rem;
+      margin-top: -8px;
+  }
+
+  .country{
+    color: black;
+    width: 13rem;
+    
+  }
+
+  .country-text{
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+.loginpage{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+.home-text{
+  margin-top: 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+  
+}
